--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ user/scarlet/home/e16/cfg/cached/
 user/scarlet/home/e16/cfg/backgrounds/*
 user/scarlet/home/e16/cfg/themes/*
 result
+firmware-dump/
